Добавлена аутентификация и авторизация, документация.