@@ -17,6 +17,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.jpa.domain.Specification;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -40,7 +41,9 @@ public class NewsService {
     private final AuthorService authorService;
     private final ScheduledExecutorService taskScheduler;
 
+
     @Transactional
+    @PreAuthorize("hasRole('USER')")
     public NewsDto createNews(NewsRequest request) {
         String imageUrl = fileStorageService.storeFile(request.getImage());
 
@@ -74,6 +77,8 @@ public class NewsService {
     }
 
     @Transactional
+
+    @PreAuthorize("hasRole('USER')")
     public void deleteNews(Long id) {
         News news = newsRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Новость не найдена"));
@@ -90,32 +95,34 @@ public class NewsService {
     }
 
     @Transactional
+    @PreAuthorize("hasRole('USER')")
     public NewsDto updateNews(Long id, NewsRequest request) {
         News existingNews = newsRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Новость не найдена"));
 
-        // Обновляем изображение
         String newImageUrl = fileStorageService.updateFile(
                 request.getImage(),
                 existingNews.getImageUrl()
         );
 
-        // Обновляем остальные поля
         newsMapper.updateNewsFromRequest(request, existingNews);
         existingNews.setImageUrl(newImageUrl);
 
-        // Обновляем связи
         updateAuthors(existingNews, request.getAuthorIds());
         updateTags(existingNews, request.getTagNames());
 
         return newsMapper.toDto(newsRepository.save(existingNews));
     }
 
+
+    @PreAuthorize("hasRole('USER')")
     private void updateAuthors(News news, Set<Long> authorIds) {
         List<Author> authors = authorRepository.findAllById(authorIds);
         news.setAuthors(new HashSet<>(authors));
     }
 
+
+    @PreAuthorize("hasRole('USER')")
     private void updateTags(News news, Set<String> tagNames) {
         Set<Tag> tags = tagNames.stream()
                 .map(name -> tagRepository.findByNameIgnoreCase(name)
@@ -123,6 +130,7 @@ public class NewsService {
                 .collect(Collectors.toSet());
         news.setTags(tags);
     }
+
 
     public NewsDto getNewsById(Long id) {
         return newsRepository.findById(id)
@@ -139,6 +147,6 @@ public class NewsService {
         Specification<News> spec = NewsSpecifications.combineSpecifications(title, newsType, tags);
         return newsRepository.findAll(spec).stream()
                 .map(newsMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
